# Python-project

./: LICENSE  README.md  pyproject.toml  weather_analysis_demo.ipynb
weather_analyzer/: __init__.py  __main__.py  analysis.py  loader.py
weather_analyzer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
