[project]
name = "weather-analyzer"

[project]
name = "weather-analyzer"
version = "0.1.0"
description = "CLI tool to analyze weather data from CSV"
authors = [{ name = "silpa bose" }]
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "matplotlib"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["weather_analyzer"]